fiexed navbar issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -780,9 +780,8 @@ hr {
 /* ==========================================================================
 3. Hero Area
 ========================================================================== */
-#hero-area {
+/* #hero-area {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../img/cover.jpg');
-  /* background-image: url(../img/cover.jpg); */
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover; 
@@ -811,7 +810,7 @@ hr {
 
 .sloder-img {
   background: #34363a;
-}
+} */
 
 /* Team Item */
 .team-item:hover {
